Prototype of console

--- a/UI/Pages/Index.razor
+++ b/UI/Pages/Index.razor
@@ -4,8 +4,10 @@
     <div class="content">
         <TabView>
             <TabViewTab>
-                <PagerContent>Page 1</PagerContent>
-                <ChildContent>Page 1 Content</ChildContent>
+                <PagerContent>Console</PagerContent>
+                <ChildContent>
+                    <Console />
+                </ChildContent>
             </TabViewTab>
 
             <TabViewTab>
