--- a/UI/Pages/Index.razor
+++ b/UI/Pages/Index.razor
@@ -1,3 +1,4 @@
+@using PrinterManager;
 @using UI.Components
 
 <div class="frame">
@@ -6,7 +7,7 @@
             <TabViewTab>
                 <PagerContent>Console</PagerContent>
                 <ChildContent>
-                    <Console />
+                    <Console Communicator="Communicator" />
                 </ChildContent>
             </TabViewTab>
 
@@ -34,4 +35,6 @@
 
 
 @code {
+    [Inject]
+    public ICommunicator? Communicator { get; set; }
 }
