--- a/UI/Shared/Console.razor
+++ b/UI/Shared/Console.razor
@@ -1,16 +1,70 @@
 ﻿@using PrinterManager;
-<div class="frame">
-    <textarea class="output">
-    </textarea>
+@using System.Text;
 
-    <input class="input" />
+@implements IDisposable
+
+<div class="frame">
+    <div class="output">
+        @foreach (var msg in outputBuffer)
+        {
+            <div>@msg</div>
+        }
+    </div>
+    
+    <input class="input" @bind="inputBuffer" @bind:event="oninput" @onkeypress="OnInputKeypress" />
 </div>
 
 @code {
+    private Queue<string> outputBuffer = new Queue<string>();
+    private string inputBuffer = string.Empty;
+
     [Parameter]
     public ICommunicator? Communicator { get; set; }
 
+    public void Dispose()
+    {
+        if (Communicator != null)
+        {
+            Communicator.OnMessage -= MessageReceived;
+        }
+    }
+
     protected override void OnInitialized()
     {
+        if (Communicator == null)
+        {
+            throw new Exception("No communicator is provided");
+        }
+
+        Communicator.OnMessage += MessageReceived;
+    }
+
+    private void MessageReceived(string message)
+    {
+        AddMessage(message);
+    }
+
+    private void OnInputKeypress(KeyboardEventArgs args)
+    {
+        if (args.Key == "Enter")
+        {
+            if (Communicator != null)
+            {
+                Communicator.Send(inputBuffer);
+            }
+
+            AddMessage($"[OUT] {inputBuffer}");
+            inputBuffer = string.Empty; // TODO: Need double enter to reset the text
+        }
+    }
+
+    private void AddMessage(string message)
+    {
+        outputBuffer.Enqueue(message);
+
+        while (outputBuffer.Count > 50)
+        {
+            outputBuffer.TryDequeue(out _);
+        }
     }
 }
