Fix console visuals

--- a/UI/Pages/Index.razor
+++ b/UI/Pages/Index.razor
@@ -36,5 +36,5 @@
 
 @code {
     [Inject]
-    public ICommunicator? Communicator { get; set; }
+    public PrinterManager.Communicators.SerialPortCommunicator? Communicator { get; set; }
 }
