--- a/UI/wwwroot/css/Tabview/Tabiew.scss
+++ b/UI/wwwroot/css/Tabview/Tabiew.scss
@@ -30,9 +30,10 @@
 
     .pages {
         display: block;
-        height: 100%;
         border-radius: 0 $border-radius $border-radius $border-radius;
         border: $border-width solid $border-color;
+        min-height: 0;
+        flex: 1;
 
         .page {
             display: none;
