New styles, flow rate calculator

--- a/UI/Pages/Index.razor
+++ b/UI/Pages/Index.razor
@@ -12,13 +12,17 @@
             </TabViewTab>
 
             <TabViewTab>
-                <PagerContent>Page 2</PagerContent>
-                <ChildContent>Page 2 Content</ChildContent>
+                <PagerContent>Motor Controls</PagerContent>
+                <ChildContent>
+                    <MotorControls />
+                    </ChildContent>
             </TabViewTab>
 
             <TabViewTab>
-                <PagerContent>Page 3</PagerContent>
-                <ChildContent>Page 3 Content</ChildContent>
+                <PagerContent>Calibration</PagerContent>
+                <ChildContent>
+                    <FlowMultiplierCalculator />
+                </ChildContent>
             </TabViewTab>
 
             <TabViewTab>
