--- a/UI/wwwroot/css/app.scss
+++ b/UI/wwwroot/css/app.scss
@@ -1,4 +1,6 @@
-@import 'Tabview/Tabiew.scss';
+@import 'Tabiew.scss';
+@import 'Input.scss';
+@import 'Button.scss';
 @import 'blazor.scss';
 
 html, body {
