--- a/UI/wwwroot/css/params.scss
+++ b/UI/wwwroot/css/params.scss
@@ -4,4 +4,6 @@ $color-active: rgb(16, 0, 128);
 
 $border-radius: 5px;
 $border-width: 1px;
+$border-width-solid: 2px;
 $spacing: 5px;
+$glow-radius: 2px;
