Style changes, Extruder e-step calculator

--- a/UI/Pages/Index.razor
+++ b/UI/Pages/Index.razor
@@ -21,7 +21,15 @@
             <TabViewTab>
                 <PagerContent>Calibration</PagerContent>
                 <ChildContent>
-                    <FlowMultiplierCalculator />
+                    <div class="panel space-bot-l">
+                        <span class="title">Flow multiplier calculator</span>
+                        <FlowMultiplierCalculator />
+                    </div>
+
+                    <div class="panel space-bot-l">
+                        <span class="title">Extruder e-step calculator</span>
+                        <ExtruderEStepCalculator />
+                    </div>
                 </ChildContent>
             </TabViewTab>
 
