--- a/UI/wwwroot/css/Tabiew.scss
+++ b/UI/wwwroot/css/Tabiew.scss
@@ -40,6 +40,7 @@
             width: 100%;
             height: 100%;
             background-color: $color-bg;
+            padding: $spacing;
 
             &.active {
                 display: block;
