--- a/UI/wwwroot/css/app.scss
+++ b/UI/wwwroot/css/app.scss
@@ -2,12 +2,16 @@
 @import 'Input.scss';
 @import 'Button.scss';
 @import 'blazor.scss';
+@import 'Panel.scss';
+@import 'Spacing.scss';
 
 html, body {
     width: 100%;
     height: 100%;
     margin: 0;
     padding: 0;
+
+    font-family: Consolas;
 }
 
 #app {
@@ -18,4 +22,5 @@ html, body {
 * {
     box-sizing: border-box;
     min-height: 0;
+    margin: 0;
 }
