--- a/UI/Shared/Console.razor
+++ b/UI/Shared/Console.razor
@@ -9,6 +9,7 @@
         {
             <div class="log">@msg</div>
         }
+        <div class="log">@outputBuilder.ToString()</div>
     </div>
     
     <input class="input" @bind="inputBuffer" @bind:event="oninput" @onkeypress="OnInputKeypress" />
@@ -17,6 +18,7 @@
 @code {
     private Queue<string> outputBuffer = new Queue<string>();
     private string inputBuffer = string.Empty;
+    private StringBuilder outputBuilder = new StringBuilder();
 
     [Parameter]
     public ICommunicator? Communicator { get; set; }
@@ -41,7 +43,7 @@
 
     private void MessageReceived(string message)
     {
-        AddMessage($"[IN] {message}");
+        AddOutput(message);
         StateHasChanged();
     }
 
@@ -54,14 +56,25 @@
                 Communicator.Send(inputBuffer);
             }
 
-            AddMessage($"[OUT] {inputBuffer}");
-            inputBuffer = string.Empty; // TODO: Need double enter to reset the text
+            AddOutput($">>>>> {inputBuffer}\n");
+            inputBuffer = string.Empty;
         }
     }
 
-    private void AddMessage(string message)
+    private void AddOutput(string message)
     {
-        outputBuffer.Enqueue(message);
+        for (int i = 0; i < message.Length; i++)
+        {
+            if (message[i] == '\n')
+            {
+                outputBuffer.Enqueue(outputBuilder.ToString());
+                outputBuilder.Clear();
+            }
+            else
+            {
+                outputBuilder.Append(message[i]);
+            }
+        }
 
         while (outputBuffer.Count > 50)
         {
