--- a/UI/wwwroot/css/Button.css
+++ b/UI/wwwroot/css/Button.css
@@ -1,1 +1,1 @@
-.btn{border:1px solid #202020;border-radius:5px;background-color:white;cursor:pointer;display:inline-block;padding:5px}.btn:hover{box-shadow:0 0 2px 2px rgba(16,0,128,0.5)}.btn:active{background-color:#100080}
+.btn{border:1px solid #202020;border-radius:5px;background-color:white;cursor:pointer;display:inline-block;padding:5px}.btn:hover{box-shadow:0 0 2px 2px rgba(16,0,128,0.5)}.btn:active{background-color:#100080}.btn.disabled{pointer-events:none;border-color:#fafafa;pointer-events:initial}
