--- a/UI/wwwroot/css/params.scss
+++ b/UI/wwwroot/css/params.scss
@@ -1,6 +1,7 @@
 $border-color: rgb(32, 32, 32);
 $color-bg: rgb(250, 250, 250);
 $color-active: rgb(16, 0, 128);
+$color-disabled: rgb(250, 250, 250);
 
 $border-radius: 5px;
 $border-width: 1px;
