Motor current calculation

--- a/UI/Pages/Index.razor
+++ b/UI/Pages/Index.razor
@@ -30,6 +30,11 @@
                         <span class="title">Extruder e-step calculator</span>
                         <ExtruderEStepCalculator />
                     </div>
+
+                    <div class="panel space-bot-l">
+                        <span class="title">Motor Current Calculator</span>
+                        <MotorCurrentCalculator />
+                    </div>
                 </ChildContent>
             </TabViewTab>
 
