--- a/UI/Shared/GCodeStreamer.razor
+++ b/UI/Shared/GCodeStreamer.razor
@@ -2,6 +2,7 @@
 @using PrinterManager;
 @using System.Text;
 @using System.Reactive.Linq;
+@using System.Collections.Concurrent;
 
 @implements IDisposable
 
@@ -14,35 +15,57 @@
         <div class="log">@outputBuilder.ToString()</div>
     </div>
 
-    @if (running)
-    {
-        <span>Streaming...</span>
-    }
-    else
-    {
-        <InputFile OnChange="@LoadFiles" multiple />
-    }
+    <div class="statistics">
+        <div>
+            Progress: @MetricsPercentage(currentLine, lineCount) %
+        </div>
+        <div>
+            Layer: @MetricsNumber(currentLayer) / @MetricsNumber(layerCount) (@MetricsPercentage(currentLayer, layerCount) %)
+        </div>
+        <div>
+            Height: @MetricsNumber(currentHeight) mm
+        </div>
+        <div>
+            Current Line: @currentLineType
+        </div>
+        <div>
+            Current Mesh: @currentMesh
+        </div>
+
+        @if (running == false)
+        {
+            <div>
+                <InputFile OnChange="@LoadFiles" multiple />
+            </div>
+        }
+    </div>
 </div>
 
 @code {
-    private Queue<string> outputBuffer = new Queue<string>();
+    private ConcurrentQueue<string> outputBuffer = new ConcurrentQueue<string>();
     private string inputBuffer = string.Empty;
     private StringBuilder outputBuilder = new StringBuilder();
-    private IDisposable? listenSubsribe;
     private bool running = false;
+
+    // Metrics
+    private int layerCount = -1;
+    private int currentLayer = -1;
+    private int lineCount = -1;
+    private int currentLine = -1;
+    private float currentHeight = -1;
+    private string currentLineType = "??";
+    private string currentMesh = "??";
 
     [Inject]
     public required IPrinterClient PrinterClient { get; set; }
 
     public void Dispose()
     {
-        listenSubsribe?.Dispose();
         running = false;
     }
 
     protected override void OnInitialized()
     {
-        listenSubsribe = PrinterClient.OnResponseData.Subscribe(MessageReceived);
     }
 
     private void MessageReceived(byte[] data)
@@ -76,42 +99,183 @@
     private void LoadFiles(InputFileChangeEventArgs e)
     {
         running = true;
-        var fileStream = e.File.OpenReadStream();
+        var fileStream = e.File.OpenReadStream(maxAllowedSize: e.File.Size);
         RunStream(fileStream); // Run in background
     }
 
     private async Task RunStream(Stream stream)
     {
-        var reader = new StreamReader(stream);
-        var responseObservable = PrinterClient
-                .OnResponseData
-                .Select(d => Encoding.ASCII.GetString(d))
-                .TakeUntil(m => m.Contains('\r') || m.Contains('\n'));
-
-        while (reader.EndOfStream == false && running)
+        try
         {
-            var line = reader.ReadLine();
-
-            if (line == null)
+            string[] gCodeLines = Array.Empty<string>();
+            using (var reader = new StreamReader(stream))
             {
-                break;
+                var gCodeScript = await reader.ReadToEndAsync();
+                gCodeLines = gCodeScript.Replace("\r\n", "\n").Split('\n');
             }
+            string buffer = "";
+            int lineIndex = 0;
+            var yields = 0;
 
-            // Skip Comments
-            if (line.StartsWith(';'))
+            CollectStaticMetrics(gCodeLines);
+
+            var subscription = PrinterClient
+                    .OnResponseData
+                    .Select(d => Encoding.ASCII.GetString(d))
+                    .Subscribe(m =>
+                    {
+                        AddOutput(m);
+                        buffer += m;
+                        InvokeAsync(StateHasChanged);
+                    });
+
+            while (running)
             {
+                var line = gCodeLines[lineIndex];
+                currentLine = lineIndex;
+                lineIndex++;
+
+                if (line == null)
+                {
+                    running = false;
+                    break;
+                }
+
+                CollectOutgoingMetrics(line);
+
+                // Skip Comments
+                if (line.StartsWith(';') || string.IsNullOrWhiteSpace(line))
+                {
+                    AddOutput($"> {line}\n");
+                    continue;
+                }
+
+                var data = Encoding.ASCII.GetBytes(line);
                 AddOutput($"> {line}\n");
-                continue;
+
+                PrinterClient.Communicator.Send(data);
+
+                while (buffer.Contains("ok") == false)
+                {
+                    if (buffer.Contains("busy"))
+                    {
+                        await Task.Delay(100);
+                    }
+                    else
+                    {
+                        await Task.Yield();
+                        yields++;
+
+                        if (yields >= 10)
+                        {
+                            await Task.Delay(1);
+                            yields = 0;
+                        }
+                    }
+
+                    buffer = buffer.ToString();
+                }
+
+                buffer = string.Empty;
+                await InvokeAsync(StateHasChanged);   
             }
-
-            var firstResponseAwaitable = responseObservable.FirstAsync();
-            var data = Encoding.ASCII.GetBytes(line);
-            AddOutput($"> {line}\n");
-
-            PrinterClient.Communicator.Send(data);
-
-            var firstResponse = await firstResponseAwaitable;
-            AddOutput($"{firstResponse.Trim()}\n");
         }
+        catch (Exception e)
+        {
+        }
+    }
+
+    /// <summary>
+    ///  Collects the non-changing parts of the metrics.
+    /// </summary>
+    /// <param name="lines">The lines of the GCode file.</param>
+    private void CollectStaticMetrics(string[] lines)
+    {
+        var lastLayerMarker = lines.LastOrDefault(l => l.StartsWith(";LAYER:"));
+
+        if (lastLayerMarker != null)
+        {
+            var layerNumberStr = lastLayerMarker.Substring(";LAYER:".Length);
+            if (int.TryParse(layerNumberStr, out var layerNumber))
+            {
+                layerCount = layerNumber;
+                currentLayer = 0;
+            }
+        }
+
+        lineCount = lines.Length;
+        currentLine = 0;
+    }
+
+    /// <summary>
+    /// Collect metrics from the line being sent out.
+    /// </summary>
+    /// <param name="line"></param>
+    private void CollectOutgoingMetrics(string line)
+    {
+        if (line.StartsWith("G0") || line.StartsWith("G1"))
+        {
+            var zPosIndex = line.IndexOf("Z");
+            if (zPosIndex >= 0)
+            {
+                zPosIndex++; // Skip the Z letter
+
+                var endOfZPos = line.IndexOf(' ', zPosIndex);
+                endOfZPos = endOfZPos >= 0
+                    ? endOfZPos
+                    : line.Length;
+
+                var zValueStr = line.Substring(zPosIndex, endOfZPos - zPosIndex);
+                if (float.TryParse(zValueStr, out var zPos))
+                {
+                    currentHeight = zPos;
+                }
+                else
+                {
+                    currentHeight = -1;
+                }
+            }
+        }
+        else if (line.StartsWith(";TYPE:"))
+        {
+            currentLineType = line.Substring(";TYPE:".Length);
+        }
+        else if (line.StartsWith(";MESH:"))
+        {
+            currentMesh = line.Substring(";MESH:".Length);
+        }
+        else if (line.StartsWith(";LAYER:"))
+        {
+            var layerNumberStr = line.Substring(";LAYER:".Length);
+            if (int.TryParse(layerNumberStr, out var layer))
+            {
+                currentLayer = layer;
+            }
+            else
+            {
+                currentLayer = -1;
+            }
+        }
+    }
+
+    private string MetricsNumber(int value)
+    {
+        return value == -1
+            ? "??"
+            : value.ToString();
+    }
+
+    private string MetricsNumber(float value)
+    {
+        return value == -1
+            ? "??"
+            : value.ToString("0.000");
+    }
+
+    private string MetricsPercentage(float current, float max)
+    {
+        return (current == -1 || max == -1)
+            ? "??"
+            : (current / max * 100.0f).ToString("0.000");
     }
 }
