--- a/UI/Shared/GCodeStreamer.razor.css
+++ b/UI/Shared/GCodeStreamer.razor.css
@@ -1,11 +1,12 @@
 .frame {
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     width: 100%;
     height: 100%;
 }
 
 .output {
+    flex:0.5;
     height: 100%;
     font-family: Consolas;
     border: none;
@@ -15,11 +16,8 @@
     overflow-x: auto;
 }
 
-.input {
-    font-family: Consolas;
-    border: none;
-    outline: none;
-    border-top: 1px solid black;
+.statistics {
+    flex: 0.5;
 }
 
 .log {
