Clean up unused styling

--- a/UI/Pages/Index.razor
+++ b/UI/Pages/Index.razor
@@ -14,17 +14,17 @@
             <Tab>
                 <Header>Calibration</Header>
                 <ChildContent>
-                    <div class="panel space-bot-l">
+                    <div class="panel">
                         <span class="title">Flow multiplier calculator</span>
                         <FlowMultiplierCalculator />
                     </div>
 
-                    <div class="panel space-bot-l">
+                    <div class="panel">
                         <span class="title">Extruder e-step calculator</span>
                         <ExtruderEStepCalculator />
                     </div>
 
-                    <div class="panel space-bot-l">
+                    <div class="panel">
                         <span class="title">Motor Current Calculator</span>
                         <MotorCurrentCalculator />
                     </div>
